# text-2-test

./: .gitignore  README.md
backend/: package-lock.json  package.json  playwright.config.js  pyproject.toml
backend/scripts/: json_scenario_runner.py  scenario_rerun.py  scenarios.json
backend/src/: __init__.py  main.py
backend/src/api/: router.py
backend/src/core/: container.py
backend/src/domain/exceptions/: test_exceptions.py
backend/src/infrastructure/config/: settings.py
backend/src/infrastructure/openai/: __init__.py  base_openai_client.py  element_selector_client.py  test_code_generator_client.py  test_step_client.py  vision_analysis_client.py
backend/src/infrastructure/playwright/: config.py  playwright_client.py
backend/src/infrastructure/repositories/: mongodb_connection_manager.py  test_case_repository.py
backend/src/prompts/: __init__.py  element_selector_prompt.py  test_code_prompt.py  test_step_prompt.py  vision_analysis_prompt.py
backend/src/services/: action_performer.py  element_selector.py  test_case_service.py  test_generator_service.py  test_runner_service.py  test_step_planner.py  vision_analysis_service.py
backend/src/services/commands/: __init__.py  base_command.py  check_command.py  click_command.py  command_factory.py  fill_command.py  input_commands.py  navigation_commands.py  select_command.py  smart_commands.py
backend/src/services/dom_extractor/: dom_extractor.v2.js  dom_extractor_service.py  (+1 more)
backend/src/utils/: dom_compressor.py  element_utils.py  json_utils.py  locator_resolver.py  logger_utils.py  prompt_logger.py
(+203 files in other folders)
