[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text-to-test-backend"
version = "0.1.0"
description = "Text-to-Test Backend Service"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "python-dotenv>=1.0.1",
    "playwright>=1.42.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "dependency-injector>=4.41.0",
    "pymongo>=4.6.1",
    "openai>=1.0.0",
    "transformers>=4.38.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
]

[tool.poetry]
name = "text-to-test-backend"
version = "0.1.0"
description = "Text-to-Test Backend Service"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
openai = ">=1.0.0"
beautifulsoup4 = "^4.12.3"
transformers = "^4.38.0"
torch = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88 

[tool.poetry.scripts]
setup = "playwright.__main__:main"